--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div id="login-overlay">
         <div class="glass-panel p-10 w-full max-w-md shadow-2xl border border-white/20 text-center">
             <div class="bg-white p-4 rounded-3xl shadow-xl inline-block mb-6 rotate-3">
-                <img src="Smansalogo.PNG" alt="Logo SMANSA" class="w-20 h-20 object-contain">
+                <img src="Smansalogo.png" alt="Logo SMANSA" class="w-20 h-20 object-contain">
             </div>
             <h2 class="text-2xl font-black text-indigo-950 mb-2">ADMIN ACCESS</h2>
             <p class="text-sm text-slate-500 font-bold mb-8 uppercase tracking-widest">Silahkan Login Terlebih Dahulu</p>
@@ -106,7 +106,7 @@
         <nav class="glass-panel p-4 flex flex-col md:flex-row justify-between items-center gap-6 sticky top-6 z-50 shadow-xl">
             <div class="flex items-center gap-4">
                 <div class="bg-white p-2 rounded-2xl shadow-md rotate-3">
-                    <img src="Smansalogo.PNG" alt="Logo SMANSA" class="w-12 h-12 object-contain">
+                    <img src="Smansalogo.png" alt="Logo SMANSA" class="w-12 h-12 object-contain">
                 </div>
                 <div>
                     <h1 class="font-extrabold text-xl tracking-tight text-indigo-950">INVENTARIS <span class="text-indigo-600">SMANSA</span></h1>
